# ML-license_plate_detection_recognition

./: .gitignore  README.md  license_plate_training.ipynb  run-project.ps1  run-project.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  config.py
backend/app/routes/v1/: health.py  license_plate.py
backend/app/schemas/: license_plate.py
backend/app/services/: license_plate_service.py
backend/scripts/: lint.ps1  lint.sh  run_dev.ps1  run_dev.sh  run_tests.ps1  run_tests.sh  setup.ps1  setup.sh
backend/tests/: conftest.py
backend/tests/integration/routers/v1/: test_health_router.py  test_license_plate_router.py
frontend/: README.md  index.html
training/: README.md  license_plate_training.ipynb
training/model_license_plate_runs/exp/: args.yaml  results.csv
