[tool.poetry]
name = "license-plate-recognition-api"
version = "1.0.0"
description = "API for detecting and recognizing Vietnamese license plates using YOLOv11 and EasyOCR"
authors = ["Thien Phan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.35.0"}
python-multipart = "^0.0.6"
opencv-python-headless = "^4.8.1"
ultralytics = "^8.0.220"
torch = "^2.1.1"
torchvision = "^0.16.1"
easyocr = "^1.7.1"
pillow = "^10.1.0"
numpy = "^1.24.3"
python-dotenv = "1.1.1"
pydantic = "^2.5.0"
pydantic-settings = "2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^4.1.0"
httpx = "0.28.1"
black = "24.10.0"
mypy = "1.13.0"
pre-commit = "4.0.1"
ruff = "0.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --host 127.0.0.1 --port 8000 --reload"
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test = "pytest -v"
lint = "ruff check ."
format = "black ."
type-check = "mypy app/"

[tool.black]
line-length = 88
target-version = ['py311']
include = '''\.pyi?$'''
extend-exclude = '''
/(
		\.eggs
	| \.git
	| \.venv
	| build
	| dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
markers = [
	"slow: marks tests as slow (deselect with '-m \"not slow\"')",
	"integration: marks tests as integration tests",
	"unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
